[gd_scene load_steps=8 format=3 uid="uid://c2wgu5xh6nnix"]

[ext_resource type="Script" uid="uid://wdy832bli4ow" path="res://menuinicio.gd" id="1_q3pb6"]
[ext_resource type="Texture2D" uid="uid://b481cbygxjyvj" path="res://_D35CDE05-89FE-4247-9803-C422C9D79F3E_-removebg-preview (1).png" id="5_c8wos"]
[ext_resource type="Texture2D" uid="uid://bsuay1sw63kcn" path="res://botonMenu.png" id="5_cmdc3"]
[ext_resource type="Texture2D" uid="uid://be2o0ndh0j2qx" path="res://FondoInicio.png" id="6_c8wos"]
[ext_resource type="Texture2D" uid="uid://bp2oqoxolsrai" path="res://configuracion.png" id="6_cmdc3"]
[ext_resource type="Texture2D" uid="uid://c3cyjl2yl4o3w" path="res://sonido.png" id="6_xallb"]
[ext_resource type="FontFile" uid="uid://dudo3khf2v3o4" path="res://VT323-Regular.ttf" id="7_c8wos"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q3pb6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 479.0
offset_bottom = 269.0
texture = ExtResource("6_c8wos")
expand_mode = 1

[node name="BotonInicio" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 175.0
offset_top = 148.0
offset_right = 300.0
offset_bottom = 205.0
texture_normal = ExtResource("5_cmdc3")

[node name="salir" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 174.0
offset_top = 202.0
offset_right = 299.0
offset_bottom = 259.0
texture_normal = ExtResource("5_cmdc3")

[node name="BotonConfiguracion" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 397.0
offset_top = 199.0
offset_right = 496.0
offset_bottom = 280.0
texture_normal = ExtResource("6_cmdc3")

[node name="PanelConfiguracion" type="Panel" parent="."]
layout_mode = 0
offset_right = 478.0
offset_bottom = 270.0

[node name="TextureRect" type="TextureRect" parent="PanelConfiguracion"]
layout_mode = 0
offset_left = 52.0
offset_top = 23.0
offset_right = 784.0
offset_bottom = 381.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_c8wos")

[node name="BotonQuitarMusica" type="TextureButton" parent="PanelConfiguracion"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.017
offset_left = 401.0
offset_top = 8.999999
offset_right = 492.874
offset_bottom = 102.0
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("6_xallb")

[node name="CerrarButton" type="TextureButton" parent="PanelConfiguracion"]
layout_mode = 0
offset_left = 174.0
offset_top = 204.0
offset_right = 299.0
offset_bottom = 261.0
texture_normal = ExtResource("5_cmdc3")

[node name="Regresar" type="Label" parent="PanelConfiguracion"]
layout_mode = 0
offset_left = 197.0
offset_top = 219.0
offset_right = 280.0
offset_bottom = 246.0
theme_override_colors/font_color = Color(0.5803922, 0.39215687, 0.13725491, 1)
theme_override_fonts/font = ExtResource("7_c8wos")
theme_override_font_sizes/font_size = 26
text = "REGRESAR"

[node name="Regresar2" type="Label" parent="PanelConfiguracion"]
layout_mode = 0
offset_left = 110.0
offset_top = 38.0
offset_right = 364.0
offset_bottom = 185.0
theme_override_colors/font_color = Color(0.5803922, 0.39215687, 0.13725491, 1)
theme_override_fonts/font = ExtResource("7_c8wos")
theme_override_font_sizes/font_size = 26
text = "INSTRUCCIONES:
.
.
.
."

[node name="Jugar" type="Label" parent="."]
layout_mode = 0
offset_left = 214.0
offset_top = 164.0
offset_right = 276.0
offset_bottom = 192.0
theme_override_colors/font_color = Color(0.5803922, 0.39215687, 0.13725491, 1)
theme_override_fonts/font = ExtResource("7_c8wos")
theme_override_font_sizes/font_size = 26
text = "JUGAR "

[node name="Salir" type="Label" parent="."]
layout_mode = 0
offset_left = 212.0
offset_top = 217.0
offset_right = 268.0
offset_bottom = 244.0
theme_override_colors/font_color = Color(0.5803922, 0.39215687, 0.13725491, 1)
theme_override_fonts/font = ExtResource("7_c8wos")
theme_override_font_sizes/font_size = 26
text = "SALIR"

[connection signal="pressed" from="BotonInicio" to="." method="_on_boton_inicio_pressed"]
[connection signal="pressed" from="salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="BotonConfiguracion" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PanelConfiguracion/BotonQuitarMusica" to="." method="_on_boton_quitar_musica_pressed"]
[connection signal="pressed" from="PanelConfiguracion/CerrarButton" to="." method="_on_cerrar_button_pressed"]
